version/0.64/_sources/autoapi/pyedb/grpc/database/terminal/bundle_terminal/BundleTerminal.rst.txt






:class:`BundleTerminal`
=======================


.. py:class:: pyedb.grpc.database.terminal.bundle_terminal.BundleTerminal(pedb, edb_object)

   Bases: :py:obj:`ansys.edb.core.terminal.bundle_terminal.BundleTerminal`


   
   Manages bundle terminal properties.


   :Parameters:

       **pedb** : :class:`Edb <pyedb.grpc.edb.Edb>`
           EDB object.

       **edb_object** : :class:`BundleTerminal <ansys.edb.core.terminal.terminals.BundleTerminal>`
           BundleTerminal instance from EDB.














   ..
       !! processed by numpydoc !!


.. py:currentmodule:: BundleTerminal

Overview
--------

.. tab-set::



   .. tab-item:: Methods

      .. list-table::
          :header-rows: 0
          :widths: auto

          * - :py:attr:`~decouple`
            - Ungroup a bundle of terminals.


   .. tab-item:: Properties

      .. list-table::
          :header-rows: 0
          :widths: auto

          * - :py:attr:`~boundary_type`
            - Boundary type.
          * - :py:attr:`~component`
            - Component.
          * - :py:attr:`~impedance`
            - Impedance value.
          * - :py:attr:`~net`
            - Returns Net object.
          * - :py:attr:`~hfss_pi_type`
            - Returns HFSS PI type.
          * - :py:attr:`~reference_layer`
            - Returns reference layer.
          * - :py:attr:`~reference_terminal`
            - Returns reference terminal.
          * - :py:attr:`~rlc_boundary_parameters`
            - Returns Rlc parameters
          * - :py:attr:`~source_amplitude`
            - Returns source amplitude.
          * - :py:attr:`~source_phase`
            - Returns source phase.
          * - :py:attr:`~term_to_ground`
            - Returns terminal to ground.
          * - :py:attr:`~terminals`
            - Returns terminals list.







Import detail
-------------

.. code-block:: python

    from pyedb.grpc.database.terminal.bundle_terminal import BundleTerminal

Property detail
---------------

.. py:property:: boundary_type
   :type: str


   
   Boundary type.



   :Returns:

       **str** : :obj:`boundary` type.
           ..













   ..
       !! processed by numpydoc !!

.. py:property:: component
   :type: pyedb.grpc.database.hierarchy.component.Component


   
   Component.



   :Returns:

       :class:`Component <pyedb.grpc.database.hierarchy.component.Component`
           ..













   ..
       !! processed by numpydoc !!

.. py:property:: impedance
   :type: float


   
   Impedance value.



   :Returns:

       :class:`python:float`
           Impedance value.













   ..
       !! processed by numpydoc !!

.. py:property:: net
   :type: pyedb.grpc.database.net.net.Net


   
   Returns Net object.



   :Returns:

       :class:`Net <pyedb.grpc.database.net.net.Net>`
           ..













   ..
       !! processed by numpydoc !!

.. py:property:: hfss_pi_type
   :type: str


   
   Returns HFSS PI type.



   :Returns:

       :class:`python:str`
           ..













   ..
       !! processed by numpydoc !!

.. py:property:: reference_layer
   :type: pyedb.grpc.database.layers.layer.Layer


   
   Returns reference layer.



   :Returns:

       :class:`Layer <pyedb.grpc.database.layer.layer.Layer>`
           ..













   ..
       !! processed by numpydoc !!

.. py:property:: reference_terminal
   :type: pyedb.grpc.database.terminal.terminal.Terminal


   
   Returns reference terminal.



   :Returns:

       :class:`Terminal <pyedb.grpc.database.terminal.terminal.Terminal>`
           ..













   ..
       !! processed by numpydoc !!

.. py:property:: rlc_boundary_parameters
   :type: pyedb.grpc.database.utility.rlc.Rlc


   
   Returns Rlc parameters



   :Returns:

       :class:`Rlc <pyedb.grpc.database.utility.rlc.Rlc>`
           ..













   ..
       !! processed by numpydoc !!

.. py:property:: source_amplitude
   :type: float


   
   Returns source amplitude.



   :Returns:

       :class:`python:float`
           ..













   ..
       !! processed by numpydoc !!

.. py:property:: source_phase
   :type: float


   
   Returns source phase.



   :Returns:

       :class:`python:float`
           ..













   ..
       !! processed by numpydoc !!

.. py:property:: term_to_ground
   :type: str


   
   Returns terminal to ground.



   :Returns:

       :class:`python:str`
           Terminal name.













   ..
       !! processed by numpydoc !!

.. py:property:: terminals
   :type: list[pyedb.grpc.database.terminal.terminal.Terminal]


   
   Returns terminals list.



   :Returns:

       :obj:`List`\[:class:`Terminal <pyedb.grpc.database.terminal.terminal.Terminal>`]
           ..













   ..
       !! processed by numpydoc !!




Method detail
-------------

.. py:method:: decouple() -> bool

   
   Ungroup a bundle of terminals.



   :Returns:

       :ref:`bool <python:bltin-boolean-values>`
           ..













   ..
       !! processed by numpydoc !!




